# ares-robotics

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
paper/: ares_paper.tex
results/: README.md  summary.json  summary.md
results/ares_navigator/: causal_failure_analysis.csv  failure_analysis.csv  mpc_vs_rl_comparison.csv  navigation_success_rate.csv  stability_proof.txt
results/assembly/: latency_comparison.csv
results/control/: lqr_comparison.csv  pid_response.csv  stability_analysis.csv  stability_proofs.txt
results/go/: fleet_benchmark.csv
results/planning/: algorithm_comparison.csv  motion_primitives.csv
results/simulation/: scenario_results.csv
src/assembly/: assembly_bridge.c  benchmark_assembly.py  interrupt_sim.asm  pid_loop.asm
src/control/octave/: pid_step_response.m  state_space_analysis.m
src/go/: go.mod
src/go/fleet/: coordinator.go  coordinator_test.go  raft.go  service.go
src/go/proto/: fleet.proto
src/planning/: CMakeLists.txt  planning_core.cpp
src/python/ares/: __init__.py  ares_navigator.py  control.py  experiments.py  planning.py  reporting.py  simulation.py
tests/: test_ares.py
