[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ares-robotics"
version = "0.1.0"
description = "Autonomous Robotic Engine for intelligent Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy", "torch"]

[project.scripts]
ares-results = "ares.reporting:write_results_summary"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
